--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <body>
     <header class="page-header header-catalog">
       <div class="page-header-wrapper">
-        <nav class="page-header-nav">
+        <nav class="page-header-nav page-header-nav-index">
           <div class="header-logo-container">
             <a class="header-logo" href="index.html">
               <img class="logo" src="images/logo.svg" alt="Логотип" width="145" height="36">
@@ -80,9 +80,9 @@
             </ul>
           </div>
           <ul class="navigation-list">
-            <li class="navigation-item popap-menu-link">
+            <li class="navigation-item popup-menu-link">
               <a class="navigation-link" href="#">Каталог товаров</a>
-              <div class="popap-menu">
+              <div class="popup-menu">
                 <ul class="catalog-list column-1">
                   <li class="catalog-item">
                     <a class="catalog-item-link" href="#">Виртуальная реальность</a>
@@ -245,10 +245,10 @@
             </li>
             <li class="product-item">
               <a class="product-list" href="#">
-                <div class="catalog-image-container">
+                <div class="catalog-image-container image-bottom">
                   <img src="images/product-monopod.svg" alt="Моноподы для селфи" width="86" height="117">
                 </div>
-                <h3 class="product-title">Моноподы для селфи</h3>
+                <h3 class="product-title title-min-width">Моноподы для селфи</h3>
               </a>
             </li>
             <li class="product-item">
@@ -346,7 +346,7 @@
         <div class="company-info-container">
           <h2 class="visually-hidden">Информация и контакты компании</h2>
           <section class="about-company">
-            <h2 class="about-company-title">О нас</h2>
+            <h2 class="about-company-title about-company-decoration">О нас</h2>
             <p class="about-company-description">
               Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.
             </p>
@@ -361,7 +361,7 @@
               <a class="about-company-link about-company-more button" href="#" >Подробнее о нас</a>
           </section>
           <section class="contacts">
-            <h2 class="about-company-title">Контакты</h2>
+            <h2 class="about-company-title contacts-decoration">Контакты</h2>
             <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис.<br>
               Заодно сможете проверить работоспособность покупки.
             </p>
@@ -473,7 +473,7 @@
           </p>
           <p class="user-email">
             <label class="modal-label" for="user-email">Ваш e-mail:</label>
-            <input type="email" class="modal-input user-email-input" id="user-email" name="user-email" placeholder="Ваш e-mail:">
+            <input type="email" class="modal-input user-email-input" id="user-email" name="user-email" placeholder="почта">
             <span class="modal-error">Забавный у вас адрес</span>
           </p>
         </div>
