--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
                       <span>Товаров: 2</span>
                       <span>Сумма: 2000 ₽</span>
                     </div>
-                    <button class="user-order-button">
+                    <div class="user-order-button">
                       <a class="popover-link" href="#">Открыть корзину</a>
-                    </button>
+                    </div>
                 </div>
               </li>
             </ul>
@@ -386,7 +386,7 @@
           <h2 class="visually-hidden">Оформление подписки</h2>
           <div class="subscription-slogan-container">
             <p class="subscription-slogan about-company-title"> Подпишитесь на рассылку</p>
-            <p class="subscripion-description">Еженедельный дайджест с обзорами новинок,
+            <p class="subscripion-description">Еженедельный дайджест с обзорами новинок,<br>
               длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
           </div>
           <div class="subscription-form-container">
@@ -504,7 +504,7 @@
               </div>
           </div>
         </div>
-        <button class="button modal-button" type="button">Отправить</button>
+        <button class="button modal-button" type="submit">Отправить</button>
       </form>
     </section>
     <script src="javascript/script.js"></script>
