--- a/catalog.html
+++ b/catalog.html
@@ -73,17 +73,17 @@
                       <span>Товаров: 2</span>
                       <span>Сумма: 2000 ₽</span>
                     </div>
-                    <button class="user-order-button">
+                    <div class="user-order-button">
                       <a class="popover-link" href="#">Открыть корзину</a>
-                    </button>
+                    </div>
                 </div>
               </li>
             </ul>
           </div>
           <ul class="navigation-list">
-            <li class="navigation-item popap-menu-link">
+            <li class="navigation-item popup-menu-link">
               <a class="navigation-link" href="#">Каталог товаров</a>
-              <div class="popap-menu">
+              <div class="popup-menu">
                 <ul class="catalog-list column-1">
                   <li class="catalog-item">
                     <a class="catalog-item-link" href="#">Виртуальная реальность</a>
@@ -321,7 +321,7 @@
                     <a class="pagination-link" href="#">15</a>
                   </li>
                 </ul>
-                  <a class="pagination-link pagination-next" href="#">
+                  <a class="pagination-next" href="#">
                     Вперёд
                   </a>
                 </div>
