Отправка пустых форм

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
               <form class="header-search" action="https://echo.htmlacademy.ru" method="get">
                 <label class="header-search-label" for="header-search"></label>
                 <div class="header-search-input-wrapper">
-                  <input class="header-search-input" type="search" name="header-search" id="header-search" placeholder="Поиск по сайту">
+                  <input class="header-search-input" type="search" name="header-search" id="header-search" placeholder="Поиск по сайту" required>
                 </div>
                 <div class="header-search-button-wrapper">
                   <button class="header-search-button" type="submit" value="Найти">Найти</button>
@@ -398,7 +398,7 @@
           <div class="subscription-form-container">
             <div class="subscription-form">
               <form class="subscription-form-email" action="https://echo.htmlacademy.ru" method="post">
-                <input class="subscription-input" type="email" placeholder="Ваш e-mail" name="email">
+                <input class="subscription-input" type="email" placeholder="Ваш e-mail" name="email" required>
                 <button class="subscription-button" type="submit">Подписаться</button>
               </form>
             </div>
